--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.zanthan.xsltxt.examples.TXTStyler</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
@@ -94,6 +106,7 @@
                             <target>
                                 <ant antfile="build.xml"
                                     output="maven-ant-run.out">
+                                    <classpath refid="maven.test.classpath"/>
                                     <target name="test_01" />
                                     <target name="test_02" />
                                     <target name="test_03" />
@@ -105,6 +118,7 @@
                         </goals>
                     </execution>
                 </executions>
+
                 <dependencies>
                     <dependency>
                         <groupId>com.sun</groupId>
